--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
 }
 
 dependencies {
+    // Add Firebase SDK (App-level build.gradle) by wenz11
+    implementation 'com.google.firebase:firebase-core:17.0.1'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -28,3 +31,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
+// Add Firebase SDK (requires google services) by wenz11
+apply plugin: 'com.google.gms.google-services'
