--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ buildscript {
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // Add Firebase SDK by wenz11
+        //noinspection GradleDependency
+        classpath 'com.google.gms:google-services:4.2.0'
     }
 }
 
