--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".JobList"
+        <activity android:name=".Register"></activity>
+        <activity
+            android:name=".JobList"
             android:label="Job List"
             android:parentActivityName=".MainActivity">
             <meta-data
