--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,24 @@ dependencies {
     // Add Firebase SDK (App-level build.gradle) by wenz11
     implementation 'com.google.firebase:firebase-core:17.0.1'
 
+    // Firebase  Authentication by wenz11
+    implementation 'com.google.firebase:firebase-auth:18.1.0'
+
+    // Firebase - Google Authentication by wenz11
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    // Firebase UI by wenz11
+    implementation 'com.firebaseui:firebase-ui-database:4.2.0'
+
+    // Firebase Real-time database by wenz11
+    implementation 'com.google.firebase:firebase-database:18.0.1'
+
+    // Firebase by wenz11
+    implementation platform('com.google.firebase:firebase-bom:17.0.0')
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-auth'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
