--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:2.0.0"
     implementation "androidx.navigation:navigation-ui:2.0.0"
 
+    // Add Material Design Support by wenz11
+    implementation 'com.google.android.material:material:1.0.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
