Change Navigation Drawer to Constraint Layout and Added Logout Button and Comment out the Splash Screen for designing purpose + Added Roboto.tff Font Family (feel free to use the Roboto medium that is added to the project)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.Splash">
+            android:theme="@style/AppTheme.NoActionBar">
+            <!--change to AppTheme.Splash for the splash screen to works-->
+            <!--temporary comment out for designing purpose-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
