--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name=".CareerQuestionnaire"
+        <activity android:name=".CareerTestResult"></activity>
+        <activity
+            android:name=".CareerQuestionnaire"
             android:label="Career Test Question"
             android:parentActivityName=".CareerTest">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.help4u.CareerTest"/>
+                android:value="com.example.help4u.CareerTest" />
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".TitleScreenActivity" />
@@ -42,8 +43,9 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <!--change to AppTheme.Splash for the splash screen to works-->
-            <!--temporary comment out for designing purpose-->
+
+            <!-- change to AppTheme.Splash for the splash screen to works -->
+            <!-- temporary comment out for designing purpose -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
