--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.help4u">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,14 +19,34 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".CareerTestResult"
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".Navigation"
+            android:label="Navigation"
+            android:parentActivityName=".JobDetails">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.help4u.JobDetails" />
+        </activity>
+        <activity
+            android:name=".JobDetails"
+            android:label="Job Details"
+            android:parentActivityName=".JobList">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.help4u.JobList" />
+        </activity>
+        <activity
+            android:name=".CareerTestResult"
             android:label="Career Test Result"
             android:parentActivityName=".CareerTest">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.help4u.CareerTest"/>
+                android:value="com.example.help4u.CareerTest" />
         </activity>
-
         <activity
             android:name=".CareerQuestionnaire"
             android:label="Career Test Question"
@@ -28,11 +55,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.help4u.CareerTest" />
         </activity>
-
         <activity android:name=".LoginActivity" />
         <activity android:name=".TitleScreenActivity" />
         <activity android:name=".Register" />
-
         <activity
             android:name=".JobList"
             android:label="Job List"
@@ -41,7 +66,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.help4u.MainActivity" />
         </activity>
-
         <activity
             android:name=".CareerTest"
             android:label="Career Test"
@@ -50,7 +74,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.help4u.CareerTest" />
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
