--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity
+            android:name=".Setting"
+            android:label="Setting"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".AboutUs"
             android:label="About Us"
@@ -56,7 +63,7 @@
             android:parentActivityName=".CareerTest">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.help4u.CareerTest"/>
+                android:value="com.example.help4u.CareerTest" />
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".TitleScreenActivity" />
