--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".Setting"
-            android:label="Setting"
+            android:label="@string/action_settings"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -27,7 +27,7 @@
         </activity>
         <activity
             android:name=".AboutUs"
-            android:label="About Us"
+            android:label="@string/menu_about_us"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -35,7 +35,7 @@
         </activity>
         <activity
             android:name=".JobDetails"
-            android:label="Job Details"
+            android:label="@string/job_detail"
             android:parentActivityName=".JobList">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -43,7 +43,7 @@
         </activity>
         <activity
             android:name=".CareerTestResult"
-            android:label="Career Test Result"
+            android:label="@string/test_result"
             android:parentActivityName=".CareerTest">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -51,7 +51,7 @@
         </activity>
         <activity
             android:name=".CareerQuestionnaire"
-            android:label="Career Test Question"
+            android:label="@string/career_test_question"
             android:parentActivityName=".CareerTest">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -59,7 +59,7 @@
         </activity>
         <activity
             android:name=".Qualification"
-            android:label="Qualification"
+            android:label="@string/qualification"
             android:parentActivityName=".CareerTest">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -70,7 +70,7 @@
         <activity android:name=".Register" />
         <activity
             android:name=".JobList"
-            android:label="Job List"
+            android:label="@string/job_list"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -78,7 +78,7 @@
         </activity>
         <activity
             android:name=".CareerTest"
-            android:label="Career Test"
+            android:label="@string/menu_career_test"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
