Added Edit Profile and Maintain Login Session And User Database

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     // Firebase UI by wenz11
-    implementation 'com.firebaseui:firebase-ui-database:4.2.0'
+    implementation 'com.firebaseui:firebase-ui-database:4.3.2'
 
     // Firebase Real-time database by wenz11
     implementation 'com.google.firebase:firebase-database:18.0.1'
@@ -46,6 +46,14 @@ dependencies {
 
     // Add Material Design Support by wenz11
     implementation 'com.google.android.material:material:1.0.0'
+
+    // Add Support for Circular Image View
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    // Add Image loading and caching library for smooth scrolling
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    // Add Firebase Storage
+    implementation 'com.google.firebase:firebase-storage:18.1.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
