--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,9 +76,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.help4u.CareerTest"/>
         </activity>
-        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".LoginActivity"
+            android:label="Welcome To Help4U" >
+        </activity>
         <activity android:name=".TitleScreenActivity" />
-        <activity android:name=".Register" />
+        <activity
+            android:name=".Register"
+            android:label="Welcome To Help4U" >
+        </activity>
         <activity
             android:name=".JobList"
             android:label="@string/job_list"
